Terminando busca hash

--- a/Hash/Makefile
+++ b/Hash/Makefile
@@ -1,17 +1,43 @@
-CC=gcc
-CFLAGS=-lm 
-DEPS= main_idx.h index.h hash.h forward_list.h node.h vector.h
-OBJ=main_idx.o index.o hash.o forward_list.o node.o vector.o
+CC = gcc
+CFLAGS = -g -lm
+LDFLAGS = 
 
-%.o: %.c $(DEPS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+# Listagem de arquivos-fonte comuns
+COMMON_SRCS = hash.c forward_list.c node.c vector.c
 
-main_idx: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS)
-	echo "Compilado!"
+# Listagem de arquivos de cabeçalho comuns
+COMMON_HEADERS = hash.h forward_list.h node.h vector.h
+
+# Programa 1
+PROGRAMA1_SRCS = main_idx.c index.c $(COMMON_SRCS)
+PROGRAMA1_OBJS = $(PROGRAMA1_SRCS:.c=.o)
+PROGRAMA1_HEADERS = index.h $(COMMON_HEADERS)
+PROGRAMA1_BIN = main_idx
+
+# Programa 2
+PROGRAMA2_SRCS = main_search.c search.c $(COMMON_SRCS)
+PROGRAMA2_OBJS = $(PROGRAMA2_SRCS:.c=.o)
+PROGRAMA2_HEADERS = search.h $(COMMON_HEADERS)
+PROGRAMA2_BIN = main_search
+
+all: $(PROGRAMA1_BIN) $(PROGRAMA2_BIN)
+
+$(PROGRAMA1_BIN): $(PROGRAMA1_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^
+
+$(PROGRAMA2_BIN): $(PROGRAMA2_OBJS)
+	$(CC) $(LDFLAGS) -o $@ $^
+
+%.o: %.c $(COMMON_HEADERS)
+	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean:
-	rm -rf *.o main
+	rm -f $(PROGRAMA1_BIN) $(PROGRAMA2_BIN) $(PROGRAMA1_OBJS) $(PROGRAMA2_OBJS)
 
-run:
-	./main
+run_main_idx: $(PROGRAMA1_BIN)
+	./$(PROGRAMA1_BIN)
+
+run_main_search: $(PROGRAMA2_BIN)
+	./$(PROGRAMA2_BIN)
+
+.PHONY: all clean run_main_idx run_main_search
